--- a/rentals/templates/rentals/checkout.html
+++ b/rentals/templates/rentals/checkout.html
@@ -39,70 +39,64 @@
 
 						<div class="form">
 
-                            <div class="hideable_shipping_form">
+
+                            <div class="hideable_billing_form">
+
+                                <p style="color: whitesmoke !important;"> Billing Address </p>
+                                <input type="text" name="billing_address" class="form__input" placeholder="Address" required>
+                                <!-- <input type="text" name="billing_address2" class="form__input" placeholder="Apartment Address" required> -->
+
+                                <input type="text" name="billing_city" class="form__input" placeholder="City" required>
+                                <input type="text" name="billing_state" class="form__input" placeholder="State" required>
+
+                                </div>
+
+                                <br>
+
+                             <div>
+                                <p style="color: whitesmoke !important;"> Pick Up Option </p>
+                                <select class="form__select" name="pickup_option" id="pickup_option" required>
+                                    <option value="" disabled selected hidden>Do you want to pickup ?</option>
+                                    <option id="pickup" value="pickup"> YES </option>
+                                    <option id="no_pickup" value="no_pickup"> NO</option>
+                                </select>
+
+                            </div>
+
+                            <div class="hideable_shipping_form" id="hideable_shipping_form" style="display: none;">
 
                             <p style="color: whitesmoke !important;"> Shipping Address </p>
 
-                            <!-- <select class="form__select" name="shipping_area" id="shipping_area" required>
-                                <option value="" disabled selected hidden>Select your region </option>
 
-                                {% if address_regions %}
+                            <input type="text" name="shipping_address" class="form__input" placeholder="House Address" >
 
-                                {% for reg in address_regions %}
-                                <option value="{{reg.slug}}"> {{reg.display}} - ({{reg.areas}}) </option>
-                                {% endfor %}
-                                {% endif %}
-                            </select> -->
-                            <input type="text" name="shipping_address" class="form__input" placeholder="House Address" required>
-
-                            <input type="text" name="shipping_city" class="form__input" placeholder="LGA" required>
+                            <input type="text" name="shipping_city" class="form__input" placeholder="LGA">
 
 
                              </div>
                             <br>
-                            <br>
-                            <div class="hideable_billing_form">
 
-                            <p style="color: whitesmoke !important;"> Billing Address </p>
-                            <input type="text" name="billing_address" class="form__input" placeholder="Address" required>
-                            <!-- <input type="text" name="billing_address2" class="form__input" placeholder="Apartment Address" required> -->
-
-                            <input type="text" name="billing_city" class="form__input" placeholder="City" required>
-                            <input type="text" name="billing_state" class="form__input" placeholder="State" required>
-
-                            </div>
-
-                            <!-- <div>
-                                <p style="color: whitesmoke !important;"> Pick Up Option </p>
-                                <select class="form__select" name="pickup_option" id="pickup_option" required>
-                                    <option value="" disabled selected hidden>Do you want us to pickup ?</option>
-                                    <option id="no_pickup" value="no_pickup"> NO</option>
-                                    <option id="pickup" value="pickup"> YES </option>
-
+                            <div>
+                                <p style="color: whitesmoke !important;"> Return Option </p>
+                                <select class="form__select" name="return_option" id="return_option" required>
+                                    <option value="" disabled selected hidden>Do you want us to handle return logistics ?</option>
+                                    <option id="no_return" value="no_return"> NO</option>
+                                    <option id="return" value="return"> YES </option>
                                 </select>
 
 
 
 
-                            </div> -->
+                            </div>
 
-                            <div style="display: none;" class="hidden_pickup_address" id="hidden_pickup_address">
+                            <div style="display: none;" class="hidden_return_address" id="hidden_return_address">
 
 
-                                <!-- <select  class="form__select" name="hidden_pickup_region" id="hidden_pickup_region">
-                                    <option value="" disabled selected hidden>Select your region </option>
+                                <p style="color: whitesmoke !important;"> Returns Pickup Address </p>
 
-                                    {% if address_regions %}
+                                <input type="text" name="return_address"  class="form__input" placeholder="House Address">
 
-                                    {% for reg in address_regions %}
-                                    <option value="{{reg.slug}}"> {{reg.display}} - ({{reg.areas}}) </option>
-                                    {% endfor %}
-                                    {% endif %}
-                                </select> -->
-
-                                <input type="text" name="pickup_address" class="form__input" placeholder="House Address">
-
-                                <input type="text" name="pickup_city" class="form__input" placeholder="LGA">
+                                <input type="text" name="return_city" class="form__input" placeholder="LGA">
 
 
 
@@ -128,10 +122,14 @@
                         <p style="color: whitesmoke !important;">My Rental Cart Summary </p>
                         <input type="text"  class="form__input" value="Que Total: ₦{{que.get_que_order_total|intcomma}}" disabled>
                         <!-- <p style="color: whitesmoke !important; ">Shipping/Pickup Fee </p> -->
-                        <p style="color: whitesmoke !important; ">Shipping Fee </p>
-						<input type="text"  class="form__input" id="final_shipping_fee" value="Shipping Fee: ₦1,500" disabled>
-						<!-- <input style="display: none;" type="text"  id="final_pickup_fee" class="form__input" value="Pickup Fee: ₦{{que.get_pickup_total|intcomma}}" disabled> -->
-
+                        <div style="display:none;" id="hideable_shipping_fee">
+                            <p style="color: whitesmoke !important; ">Shipping Fee </p>
+                            <input type="text"  class="form__input" id="final_shipping_fee" value="Shipping Fee: ₦0" disabled>
+                        </div>
+                        <div style="display:none;" id="hideable_returns_fee">
+                            <p style="color: whitesmoke !important; ">Returns Fee </p>
+						<input type="text"  class="form__input" id="final_return_fee" value="Returns Fee: ₦0" disabled>
+                        </div>
 
 						<span class="form__text">Your personal data will be used to process your order, support your experience throughout this website, and for other purposes described in our privacy policy.</span>
 						<button type="submit" class="form__btn">>> Payment</button>
@@ -154,46 +152,43 @@
 
 $(document).ready(function(){
 
+
     $('#pickup_option').on('change', function () {
-        if ($(this).find('#pickup').is(':selected')) {
-        $('#hidden_pickup_address').show();
-        $('#final_pickup_fee').show()
+
+        if ($(this).find('#no_pickup').is(':selected')) {
+            $('#hideable_shipping_form').show();
+            $('#hideable_shipping_fee').show();
+            $('input[name="shipping_address"]').prop('required', true)
+            $('input[name="shipping_city"]').prop('required', true)
+            $('#final_shipping_fee').val(`Shipping Fee: ₦1,500`)
+
         } else {
-        $('#hidden_pickup_address').hide();
+            $('input[name="shipping_address"]').prop('required', false)
+            $('input[name="shipping_city"]').prop('required', false)
+            $('#hideable_shipping_form').hide();
+            $('#hideable_shipping_fee').hide();
+            $('#final_shipping_fee').val(`Shipping Fee: ₦0`)
 
         }
     })
 
 
+    $('#return_option').on('change', function () {
+        if ($(this).find('#return').is(':selected')) {
+            $('#hidden_return_address').show();
+            $('#hideable_returns_fee').show();
+            $('input[name="return_address"]').prop('required', true)
+            $('input[name="return_city"]').prop('required', true)
+            $('#final_return_fee').val(`Returns Fee: ₦1,500`)
 
-    $('#shipping_area').on('change', function () {
-        console.log($(this).children("option:selected").val())
-        if ($(this).children("option:selected").val() == "lagos_island_1") {
-            $('#final_shipping_fee').val('Shipping Fee: ₦1,500')
-        }else if($(this).children("option:selected").val() == "lagos_mainland_1"){
-            $('#final_shipping_fee').val('Shipping Fee: ₦2,000')
-        } else if ($(this).children("option:selected").val() == "lagos_island_2"){
-            $('#final_shipping_fee').val('Shipping Fee: ₦2,000')
-        } else if ($(this).children("option:selected").val() == "lagos_mainland_2"){
-            $('#final_shipping_fee').val('Shipping Fee: ₦2,500')
+        } else {
+            $('input[name="return_address"]').prop('required', false)
+            $('input[name="return_city"]').prop('required', false)
+            $('#hidden_return_address').hide();
+            $('#hideable_returns_fee').hide();
+            $('#final_return_fee').val(`Returns Fee: ₦0`)
         }
     })
-
-
-    $('#hidden_pickup_region').on('change', function () {
-        console.log($(this).children("option:selected").val())
-        if ($(this).children("option:selected").val() == "lagos_island_1") {
-            $('#final_pickup_fee').val('Pickup Fee: ₦1,500')
-        }else if($(this).children("option:selected").val() == "lagos_mainland_1"){
-            $('#final_pickup_fee').val('Pickup Fee: ₦2,000')
-        } else if ($(this).children("option:selected").val() == "lagos_island_2"){
-            $('#final_pickup_fee').val('Pickup Fee: ₦2,000')
-        } else if ($(this).children("option:selected").val() == "lagos_mainland_2"){
-            $('#final_pickup_fee').val('Pickup Fee: ₦2,500')
-        }
-    })
-
-
 
 })
 </script>
@@ -217,38 +212,41 @@ console.log(user)
         function submitFormData(){
             console.log("Form Submitted")
 
-            // let pickupInfo;
-            // if ($('#pickup_option').find('#pickup').is(':selected')){
 
-            //     pickupInfo = {
-            //     "hidden_pickup_region":form.hidden_pickup_region.value,
-            //     "pickup_address":form.pickup_address.value,
-            //     "pickup_city":form.pickup_city.value,
-            //     "pickup_option":form.pickup_option.value,
-            // }
-            // } else {
-            //     pickupInfo = {
-            //     "hidden_pickup_region":null,
-            //     "pickup_address":null,
-            //     "pickup_city":null,
-            //     "pickup_option":form.pickup_option.value,
-            //     }
-            // }
+            let returnInfo;
+            if ($('#return_option').find('#return').is(':selected')){
 
-            // var pickupInfo = {
-            //     // "hidden_pickup_region":form.hidden_pickup_region.value,
-            //     "pickup_address":form.pickup_address.value,
-            //     "pickup_city":form.pickup_city.value,
-            //     "pickup_option":form.pickup_option.value,
-            // }
+                returnInfo = {
+                "return_address":form.return_address.value,
+                "return_city":form.return_city.value,
+                "return_option":form.return_option.value,
+            }
+            } else {
+                returnInfo = {
+                "return_address":null,
+                "return_city":null,
+                "return_option":form.return_option.value,
+                }
+            }
 
 
 
-            var shippingInfo = {
+            let shippingInfo;
+            if ($('#pickup_option').find('#no_pickup').is(':selected')){
+
+                shippingInfo = {
                 'shipping_address':form.shipping_address.value,
 				'shipping_city':form.shipping_city.value,
-				// 'shipping_area':form.shipping_area.value
+                'pickup_option': form.pickup_option.value
             }
+            } else {
+                shippingInfo = {
+                "shipping_address":null,
+                "shipping_city":null,
+                "pickup_option":form.pickup_option.value,
+                }
+            }
+
 
 
             var billingInfo = {
@@ -263,6 +261,7 @@ console.log(user)
 
             console.log("shipping info", shippingInfo)
             console.log("billing info", billingInfo)
+            console.log("return info", returnInfo)
 
 
 
@@ -274,7 +273,7 @@ console.log(user)
 	    			'X-CSRFToken':csrftoken,
                 },
 
-                body:JSON.stringify({'shippingInfo':shippingInfo, 'billingInfo': billingInfo}),
+                body:JSON.stringify({'shippingInfo':shippingInfo, 'billingInfo': billingInfo, 'returnInfo':returnInfo}),
             })
             .then((response) => response.json())
             .then((data) => {
