--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -74,64 +74,50 @@
 
                             <br>
 
-                            <!-- <div>
-                                <p style="color: whitesmoke !important;"> Delivery Option </p>
-                                <select class="form__select delivery_select" name="delivery_option" id="delivery_option">
-                                    <option id="standard" value="standard"> Standard Delivery </option>
-                                    {% if order.instant_delivery_eligible == True %}
-                                    <option id="instant" value="instant"> Instant Delivery </option>
-                                    {% endif %}
-
-
-                                </select>
-
-                            </div> -->
-
-                            <!-- <br>
-                            <a style="display:none;" href="#/"  id="showMeBtn" class="form__btn  center-align">
-                                Get My Location
-                            </a>
-                             <br>
-                             <div id="map"></div>
-                            <br>
-                            <div id="locationList"></div> -->
 
 
 
 
-                            <div class="hideable_shipping_form">
+
+
+                            <div class="hideable_billing_form">
+
+
+                                <p style="color: whitesmoke !important;"> Billing Address </p>
+                                <input type="text" name="billing_address" class="form__input" placeholder="Address" required>
+
+
+                                <input type="text" name="billing_city" class="form__input" placeholder="City" required>
+                                <input type="text" name="billing_state" class="form__input" placeholder="State" required>
+
+
+
+                                </div>
+
+
+                                <div>
+                                    <p style="color: whitesmoke !important;"> Pick Up Option </p>
+                                    <select class="form__select" name="pickup_option" id="pickup_option" required>
+                                        <option value="" disabled selected hidden>Do you want to pickup ?</option>
+                                        <option id="pickup" value="pickup"> YES </option>
+                                        <option id="no_pickup" value="no_pickup"> NO</option>
+                                    </select>
+
+                                </div>
+
+
+                            <div style="display: none;" class="hideable_shipping_form" id="hideable_shipping_form">
                             <p style="color: whitesmoke !important;"> Shipping Address </p>
-                            <!-- <select class="form__select" name="shipping_area" id="shipping_area" required>
-                                <option value="" disabled selected hidden>Select your region </option>
 
-                                {% if address_regions %}
+                            <input type="text" id="shipping_address_iddd"  name="shipping_address" class="form__input" placeholder="House Address">
 
-                                {% for reg in address_regions %}
-                                <option value="{{reg.slug}}"> {{reg.display}} - ({{reg.areas}}) </option>
-                                {% endfor %}
-                                {% endif %}
-                            </select> -->
-                            <input type="text" id="shipping_address_iddd"  name="shipping_address" class="form__input" placeholder="House Address"  required>
-
-                            <input type="text" id="shipping_city_id" name="shipping_city" class="form__input" placeholder="LGA"  required>
+                            <input type="text" id="shipping_city_id" name="shipping_city" class="form__input" placeholder="LGA" >
 
                              </div>
 
                             <br>
                             <br>
-                            <div class="hideable_billing_form">
 
-
-                            <p style="color: whitesmoke !important;"> Billing Address </p>
-                            <input type="text" name="billing_address" class="form__input" placeholder="Address" required>
-                            <!-- <input type="text" name="billing_address2" class="form__input" placeholder="Apartment Address" required> -->
-
-                            <input type="text" name="billing_city" class="form__input" placeholder="City" required>
-                            <input type="text" name="billing_state" class="form__input" placeholder="State" required>
-
-
-
-                            </div>
 
                         </div>
 
@@ -152,9 +138,10 @@
 					<div action="#" class="form">
                         <p style="color: whitesmoke !important;"> Order Summary </p>
 						<input type="text"  class="form__input" value="Total: {{order.get_order_total}}" disabled>
-                        <!-- <p style="color: whitesmoke !important; ">Shipping/Pickup Fee </p> -->
-                        <p style="color: whitesmoke !important; ">Shipping Fee </p>
-						<input type="text"  class="form__input" id="final_shipping_fee" value="Shipping Fee: ₦1,500" disabled>
+                        <div style="display:none;" id="hideable_shipping_fee">
+                            <p style="color: whitesmoke !important; ">Shipping Fee </p>
+                            <input type="text"  class="form__input" id="final_shipping_fee" value="Shipping Fee: ₦0" disabled>
+                        </div>
 						<span class="form__text">Your personal data will be used to process your order, support your experience throughout this website, and for other purposes described in our privacy policy.</span>
 						<button type="submit" class="form__btn">>> Payment</button>
 					</div>
@@ -195,19 +182,26 @@ $(document).ready(function(){
 
     $(document).ready(function(){
 
+        $('#pickup_option').on('change', function () {
 
-        $('#shipping_area').on('change', function () {
-            console.log($(this).children("option:selected").val())
-            if ($(this).children("option:selected").val() == "lagos_island_1") {
-                $('#final_shipping_fee').val('Shipping Fee: ₦1,500')
-            }else if($(this).children("option:selected").val() == "lagos_mainland_1"){
-                $('#final_shipping_fee').val('Shipping Fee: ₦2,000')
-            } else if ($(this).children("option:selected").val() == "lagos_island_2"){
-                $('#final_shipping_fee').val('Shipping Fee: ₦2,000')
-            } else if ($(this).children("option:selected").val() == "lagos_mainland_2"){
-                $('#final_shipping_fee').val('Shipping Fee: ₦2,500')
-            }
+        if ($(this).find('#no_pickup').is(':selected')) {
+            $('#hideable_shipping_form').show();
+            $('#hideable_shipping_fee').show();
+            $('input[name="shipping_address"]').prop('required', true)
+            $('input[name="shipping_city"]').prop('required', true)
+            $('#final_shipping_fee').val(`Shipping Fee: ₦1,500`)
+
+        } else {
+            $('input[name="shipping_address"]').prop('required', false)
+            $('input[name="shipping_city"]').prop('required', false)
+            $('#hideable_shipping_form').hide();
+            $('#hideable_shipping_fee').hide();
+            $('#final_shipping_fee').val(`Shipping Fee: ₦0`)
+
+        }
         })
+
+
 
 
     })
@@ -245,16 +239,24 @@ if (user != 'AnonymousUser'){
                 'total': total,
             }
 
-            var shippingInfo = {
-                'shipping_address':form.shipping_address.value,
-				// 'shipping_address2':form.shipping_address2.value,
-				'shipping_city':form.shipping_city.value,
-				// 'shipping_area':form.shipping_area.value
-                // 'shipping_long':form.shipping_long.value,
-                // 'shipping_lat': form.shipping_lat.value,
-                // 'delivery_option': form.delivery_option.value,
 
+
+            let shippingInfo;
+            if ($('#pickup_option').find('#no_pickup').is(':selected')){
+
+                shippingInfo = {
+                'shipping_address':form.shipping_address.value,
+				'shipping_city':form.shipping_city.value,
+                'pickup_option': form.pickup_option.value
             }
+            } else {
+                shippingInfo = {
+                "shipping_address":null,
+                "shipping_city":null,
+                "pickup_option":form.pickup_option.value,
+                }
+            }
+
 
 
             var billingInfo = {
