--- a/rentals/templates/events/rental_order_successfull.html
+++ b/rentals/templates/events/rental_order_successfull.html
@@ -274,6 +274,20 @@
                                       <span style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">{{que.ordered_date}}</span>
                                     </td>
                                   </tr>
+                                  {% if que.pick_up_prompt == True %}
+                                  <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
+                                    <td class="kmTextContent" valign="top" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
+                                      <h2 class="shipping-details-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 22px; margin-bottom: 8px; margin-top: 35px;"> Pickup </h2>
+                                      <span style="text-transform: uppercase; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
+
+                                        Kindly  <a href="https://wa.me/2348103699838"><strong>contact</strong> </a>  Gameon for pickup location
+
+
+                                                      </span>
+                                    </td>
+                                  </tr>
+                                  {% else %}
+
                                   <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                     <td class="kmTextContent" valign="top" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                       <h2 class="shipping-details-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 22px; margin-bottom: 8px; margin-top: 35px;">Shipping Address</h2>
@@ -284,8 +298,27 @@
                                                         {{que.shipping_address.state}} </span>
                                     </td>
                                   </tr>
-                                 
-                                  
+
+                                  {% endif %}
+
+                                  {% if que.return_prompt == True %}
+
+
+                                  <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
+                                    <td class="kmTextContent" valign="top" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
+                                      <h2 class="shipping-details-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 22px; margin-bottom: 8px; margin-top: 35px;">Return Address</h2>
+                                      <span style="text-transform: uppercase; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;"> {% if que.user.first_name %} {{que.user.first_name}} {% endif %} {% if que.user.last_name %} {{que.user.last_name}} {% endif %}  <br/>
+                                                         {{que.return_address.street_address}},<br/>
+                                                        {{que.return_address.city}}<br/>
+                                                        {{que.return_address.region}} <br>
+                                                        {{que.return_address.state}} </span>
+                                    </td>
+                                  </tr>
+
+                                  {% endif %}
+
+
+
                                   <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                     <td class="kmTextContent" valign="top" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                       <h4 class="shipping-details-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 14px; margin-bottom: 8px; margin-top: 35px;">Order number</h4>
@@ -319,7 +352,7 @@
                                               <h3 style="margin-top: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 18px;"> {{val.item.name}} </h3>
                                               <table>
                                                 <tbody>
-                                                 
+
                                                   <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                                     <td style="padding-right: 20px; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;"><span class="h_4" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 14px;">QUANTITY</span></td>
                                                     <td style="font-size: 14px; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300; padding: 0;">{{val.quantity}}</td>
@@ -337,8 +370,8 @@
                                   </tr>
                                   {% endfor %}
                                   {% endif %}
-                                  
-                                  
+
+
 
 
 
@@ -350,12 +383,12 @@
                                             <td class="total-item-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300; width: 100%; padding: 0 15px 0 0;" align="right">Subtotal</td>
                                             <td style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">₦{{que_item_total}} </td>
                                           </tr>
-                                         
+
                                           <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                             <td class="total-item-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300; width: 100%; padding: 0 15px 0 0;" align="right">Shipping</td>
                                             <td style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">₦{{que.shipping_fee}}</td>
                                           </tr>
-                                          
+
                                           <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                             <td class="total-item-title" style="font-weight: 600; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; width: 100%; padding: 0 15px 0 0;" align="right">Total</td>
                                             <td style="font-weight: 600; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important;">₦{{que.get_total}}</td>
@@ -369,10 +402,10 @@
                             </td>
                           </tr>
 
-                          
 
 
-                       
+
+
 
 
 
@@ -381,7 +414,7 @@
                               <table border="0" cellpadding="0" cellspacing="0" class="kmButtonBarBlock" width="100%" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0;">
                                 <tbody class="kmButtonBarOuter">
 
-                                    
+
                                   <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                     <td class="kmButtonBarInner" align="center" valign="top" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300; padding: 40px 0px;">
                                       <table border="0" cellpadding="0" cellspacing="0" class="kmButtonBarContentContainer" width="100%" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0;">
