--- a/shop/templates/events/new_sales_order_admin.html
+++ b/shop/templates/events/new_sales_order_admin.html
@@ -278,14 +278,22 @@
                                     <td class="kmTextContent" valign="top" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                       <h2 class="shipping-details-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 22px; margin-bottom: 8px; margin-top: 35px;">Shipping Address</h2>
                                       <span style="text-transform: uppercase; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;"> {% if order.user.first_name %} {{order.user.first_name}} {% endif %} {% if order.user.last_name %} {{order.user.last_name}} {% endif %}<br/>
-                                                        {{order.shipping_address.street_address}} <br/>
-                                                                 {{order.shipping_address.city}}<br/>
-                                                                 {{order.shipping_address.region}} <br>
-                                                               {{order.shipping_address.state}} </span>
+
+                                        {% if order.pick_up_prompt == True %}
+                                          Order to be picked up by customer
+                                                {% else %}
+                                                {{order.shipping_address.street_address}} <br/>
+                                              {{order.shipping_address.city}}<br/>
+                                              {{order.shipping_address.region}} <br>
+                                              {{order.shipping_address.state}}
+                                                {% endif %} </span>
+
+
+
                                     </td>
                                   </tr>
-                                 
-                                  
+
+
                                   <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                     <td class="kmTextContent" valign="top" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                       <h4 class="shipping-details-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 14px; margin-bottom: 8px; margin-top: 35px;">Order number</h4>
@@ -319,7 +327,7 @@
                                               <h3 style="margin-top: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 18px;"> {{val.item.name}} </h3>
                                               <table>
                                                 <tbody>
-                                               
+
                                                   <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                                     <td style="padding-right: 20px; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;"><span class="h_4" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 14px;">QUANTITY</span></td>
                                                     <td style="font-size: 14px; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300; padding: 0;">{{val.quantity}}</td>
@@ -337,8 +345,8 @@
                                   </tr>
                                   {% endfor %}
                                   {% endif %}
-                                  
-                                  
+
+
 
 
 
@@ -350,12 +358,12 @@
                                             <td class="total-item-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300; width: 100%; padding: 0 15px 0 0;" align="right">Subtotal</td>
                                             <td style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">₦{{order_item_total}} </td>
                                           </tr>
-                                         
+
                                           <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                             <td class="total-item-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300; width: 100%; padding: 0 15px 0 0;" align="right">Shipping</td>
                                             <td style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">₦{{order.shipping_fee}}</td>
                                           </tr>
-                                          
+
                                           <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                             <td class="total-item-title" style="font-weight: 600; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; width: 100%; padding: 0 15px 0 0;" align="right">Total</td>
                                             <td style="font-weight: 600; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important;">₦{{order.get_total}}</td>
@@ -369,10 +377,10 @@
                             </td>
                           </tr>
 
-                          
 
 
-                       
+
+
 
 
 
@@ -381,7 +389,7 @@
                               <table border="0" cellpadding="0" cellspacing="0" class="kmButtonBarBlock" width="100%" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0;">
                                 <tbody class="kmButtonBarOuter">
 
-                                    
+
                                   <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                     <td class="kmButtonBarInner" align="center" valign="top" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300; padding: 40px 0px;">
                                       <table border="0" cellpadding="0" cellspacing="0" class="kmButtonBarContentContainer" width="100%" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0;">
