--- a/rentals/templates/rentals/checkout.html
+++ b/rentals/templates/rentals/checkout.html
@@ -120,7 +120,7 @@
 					<!-- checkout -->
 					<div action="#" class="form">
                         <p style="color: whitesmoke !important;">My Rental Cart Summary </p>
-                        <input type="text"  class="form__input" value="Que Total: ₦{{que.get_que_order_total|intcomma}}" disabled>
+                        <input type="text"  class="form__input" value="Rent Total: ₦{{que.get_que_order_total|intcomma}}" disabled>
                         <!-- <p style="color: whitesmoke !important; ">Shipping/Pickup Fee </p> -->
                         <div style="display:none;" id="hideable_shipping_fee">
                             <p style="color: whitesmoke !important; ">Shipping Fee </p>
