--- a/rentals/templates/rentals/rental_game_details.html
+++ b/rentals/templates/rentals/rental_game_details.html
@@ -237,3 +237,17 @@
 {% endblock modals %}
 
 
+{% block extra_scripts %}
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('#carousel1').owlCarousel({
+            loop:false
+        });
+
+    });
+</script>
+
+
+{% endblock extra_scripts %}
+
+
