--- a/rentals/templates/rentals/checkout.html
+++ b/rentals/templates/rentals/checkout.html
@@ -56,7 +56,7 @@
                              <div>
                                 <p style="color: whitesmoke !important;"> Pick Up Option </p>
                                 <select class="form__select" name="pickup_option" id="pickup_option" required>
-                                    <option value="" disabled selected hidden>Do you want to pickup ?</option>
+                                    <option value="" disabled selected hidden>Will you like to pick up from the store ?</option>
                                     <option id="pickup" value="pickup"> YES </option>
                                     <option id="no_pickup" value="no_pickup"> NO</option>
                                 </select>
