--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -99,8 +99,8 @@
                                     <p style="color: whitesmoke !important;"> Pick Up Option </p>
                                     <select class="form__select" name="pickup_option" id="pickup_option" required>
                                         <option value="" disabled selected hidden>Do you want to pickup ?</option>
-                                        <option id="pickup" value="pickup"> YES </option>
-                                        <option id="no_pickup" value="no_pickup"> NO</option>
+                                        <option id="pickup" value="pickup"> Yes, I would pickup </option>
+                                        <option id="no_pickup" value="no_pickup"> No, I want it delivered. </option>
                                     </select>
 
                                 </div>
@@ -111,7 +111,7 @@
 
                             <input type="text" id="shipping_address_iddd"  name="shipping_address" class="form__input" placeholder="House Address">
 
-                            <input type="text" id="shipping_city_id" name="shipping_city" class="form__input" placeholder="LGA" >
+                            <input type="text" id="shipping_city_id" name="shipping_city" class="form__input" placeholder="City" >
 
                              </div>
 
