--- a/rentals/templates/events/new_rental_order_admin.html
+++ b/rentals/templates/events/new_rental_order_admin.html
@@ -360,6 +360,16 @@
                                                   </tr>
                                                 </tbody>
                                               </table>
+
+                                              <table>
+                                                <tbody>
+
+                                                  <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
+                                                    <td style="padding-right: 20px; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;"><span class="h_4" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 14px;">No of Days </span></td>
+                                                    <td style="font-size: 14px; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300; padding: 0;">{{val.no_of_days}}</td>
+                                                  </tr>
+                                                </tbody>
+                                              </table>
                                             </td>
                                             <td style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300; padding: 10px 0px 10px 10px;" valign="top" align="right">
                                                 ₦{{val.get_final_price}}
