--- a/rentals/templates/events/admin_new_rental_order.html
+++ b/rentals/templates/events/admin_new_rental_order.html
@@ -94,7 +94,7 @@
                                                                                             <p> Return: YES </p>
                                                                                             <p> Return Address:  {{que.return_address.street_address}}  {{que.return_address.city}},  {{que.return_address.region}} </p>
                                                                                             {% else %}
-                                                                                            <p> NO </p>
+                                                                                            <p>Return:  NO </p>
                                                                                             {% endif %}
 
                                                                              </td>
