--- a/rentals/templates/rentals/base.html
+++ b/rentals/templates/rentals/base.html
@@ -24,6 +24,24 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Game On">
 	<title>Buy, Rent, Play|{{page_title}}</title>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-MWSN9TT');</script>
+<!-- End Google Tag Manager -->
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FME8B9WTES"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FME8B9WTES');
+</script>
+
 <script type="text/javascript">
 		function getToken(name) {
 			let cookieValue = null;
@@ -67,6 +85,8 @@
 
 </script>
 
+
+
 <style type="text/css">
 
 .not-visible {
@@ -105,6 +125,11 @@
 
 </head>
 <body>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MWSN9TT"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+
 	<!-- header -->
 	<header class="header">
 		<div class="header__wrap">
