--- a/rentals/templates/rentals/base.html
+++ b/rentals/templates/rentals/base.html
@@ -33,13 +33,23 @@
 <!-- End Google Tag Manager -->
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FME8B9WTES"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-FME8B9WTES"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-FME8B9WTES');
+</script> -->
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z9YBZB1HG7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z9YBZB1HG7');
 </script>
 
 <script type="text/javascript">
