--- a/rentals/templates/rentals/rentalHome.html
+++ b/rentals/templates/rentals/rentalHome.html
@@ -87,7 +87,7 @@
 
 
 
-<!-- home -->
+<!--
 <section class="section  section--bg" data-bg="{{the_featured_banner.bannerImagePath.url}}">
     <div class="container">
         <div class="row">
@@ -111,9 +111,9 @@
         </div>
     </div>
 
-    <!-- carousel -->
+
     <div class="owl-carousel section__carousel section__carousel--big" id="carousel0">
-        <!-- big card -->
+
 
         {% if featured_rentals %}
         {% for val in featured_rentals %}
@@ -175,7 +175,7 @@
             </div>
 
         </div>
-        <!-- end big card -->
+
         {% endfor %}
         {% endif %}
 
@@ -183,9 +183,9 @@
 
 
     </div>
-    <!-- end carousel -->
-</section>
-<!-- end home -->
+
+</section> -->
+
 
 
 
